[gd_scene load_steps=4 format=3 uid="uid://cf6ava8086hif"]

[ext_resource type="Script" uid="uid://bx25iqsqvki3o" path="res://Scripts/mini_game_player.gd" id="1_4oew3"]
[ext_resource type="Texture2D" uid="uid://rlmgnpcedflb" path="res://icon.svg" id="2_p6nh1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4bq6d"]
radius = 63.0
height = 166.0

[node name="MiniGamePlayer" type="CharacterBody2D"]
collision_mask = 7
script = ExtResource("1_4oew3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_p6nh1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4bq6d")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="DashAgainTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashAgainTimer" to="." method="_on_dash_again_timer_timeout"]
